# NOTE: do not use a workspace here, because we need to specify a special
# profile for the WASM release target...

[package]
name = "nix2js"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1+"

[dependencies]
rnix = { git = "https://github.com/zseri/rnix-parser", branch = "fix-string-interpol" }
vlq = "0.5"

[dependencies.serde_json]
version = "1.0"
features = ["float_roundtrip","preserve_order"]
