[package]
name = "nix2js-wasm"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1+"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

[dependencies.nix2js]
path = ".."

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
